--- a/Chat.App/package.json
+++ b/Chat.App/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@microsoft/signalr": "^6.0.4",
+    "ngx-infinite-scroll": "^13.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
