--- a/.github/workflows/release-azure_shchoholiev-chat-app.yml
+++ b/.github/workflows/release-azure_shchoholiev-chat-app.yml
@@ -19,13 +19,14 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '~12'
+          node-version: '16.14.2'
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: ./Chat.APP
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
