--- a/.github/workflows/release-azure_shchoholiev-chat-app.yml
+++ b/.github/workflows/release-azure_shchoholiev-chat-app.yml
@@ -21,11 +21,10 @@ jobs:
         with:
           node-version: '16.14.2'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
         working-directory: ./Chat.APP
       
       - name: Upload artifact for deployment job
