--- a/.github/workflows/release-azure_shchoholiev-chat-app.yml
+++ b/.github/workflows/release-azure_shchoholiev-chat-app.yml
@@ -28,7 +28,7 @@ jobs:
         working-directory: ./Chat.APP
         
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: Compress-Archive . release.zip
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -37,7 +37,7 @@ jobs:
           path: .
      
       - name: unzip artifact for deployment
-        run: unzip release.zip
+        run: Expand-Archive release.zip
 
   deploy:
     runs-on: ubuntu-latest
