--- a/Chat/Chat.API/appsettings.json
+++ b/Chat/Chat.API/appsettings.json
@@ -14,5 +14,8 @@
     "IssuerSigningKey": "HHUHU92479-JKKNS23O",
     "ValidIssuer": "https://localhost:7083",
     "ValidAudience": "https://localhost:7083"
+  },
+  "ConnectionStrings": {
+    "SQLDatabase": "workstation id=shchoholiev-chat.mssql.somee.com;packet size=4096;user id=nabatovf1_SQLLogin_1;pwd=o1umolmdee;data source=shchoholiev-chat.mssql.somee.com;persist security info=False;initial catalog=shchoholiev-chat"
   }
 }
