--- a/Chat/Chat.API/ClientApp/package.json
+++ b/Chat/Chat.API/ClientApp/package.json
@@ -16,11 +16,12 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
-    "@angular/material": "^13.3.4",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@material/dialog": "^14.0.0",
     "@microsoft/signalr": "^6.0.4",
     "ngx-infinite-scroll": "^13.0.1",
     "rxjs": "~7.5.0",
